--- a/inndex.html
+++ b/inndex.html
@@ -19,7 +19,7 @@
             <div class="menu__wrapper">
                 <nav class="menu">
                     <a class="logo" href="#">
-                        <img class="logo__item" src="./image/Логотип.png" alt="image">
+                        <img class="logo__item" src="./image/logo.png" alt="image">
                     </a>
                     <button class="menu__button button">
                         <img class="menu__button-icon" src="./image/button-icon.png" alt="image">
@@ -445,8 +445,132 @@
     </section>
     <footer class="footer">
         <div class="container">
-            <div class="footer__discription"></div>
-            
+            <div class="footer__wrapper">
+                <div class="footer__discription">
+                    <img class="footer__logo" src="./image/logo.svg" alt="logo">
+                    <p class="logo__text">Сайт носит исключительно информационный характер и ни при каких условиях не
+                        является публичной офертой, определяемой положениями ч. 2 ст. 437 Гражданского кодекса РФ. Чтобы
+                        получить подробную информацию о стоимости услуг, обращайтесь, пожалуйста, к администраторам
+                        клиник.
+                        «Бест Клиник» - частная клиника и платная поликлиника в Москве, больница стационар.</p>
+                </div>   
+                <div class="footer__info">
+                    <div class="footer__heading-list">
+                        <div class="footer__heading-menu-list">
+                            <h4 class="">Сервисе</h4>
+                            <h4 class="">Направления</h4>
+                            <h4 class=""></h4>
+                        </div>
+                        <h4 class="footer__heading-support">Поддержка</h4>
+                    </div>
+                    <hr>
+                    <div class="footer__menu-block">
+                        <div class="footer__menu">
+                            <ul class="footer__menu-list">
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">О сервисе</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Вопросы и ответы</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Контакты</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Партнеры</a>
+                                </li>
+                            </ul>
+                            <ul class="footer__menu-list">
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Азартные игры</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Потребительские услуги</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Виды спорта</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Государство и право</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Дом и сад</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Еда и напитки</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Здоровье</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Игры</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Искусство и развлечения</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Компьютеры, электроника</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Наука и образование</a>
+                                </li>
+                            </ul>
+                            <ul class="footer__menu-list">
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Новости и блоги</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Образ жизни</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Питомцы и животные</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Путешествия и туризм</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Работа и карьера</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Сообщество и общество</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Справочные материалы</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Транспортные средства</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Тяжелая промышленность</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Финансы</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Хобби и досуг</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="footer__support">
+                            <a class="support__email" href="mailto:info@rangi.ru">info@rangi.ru</a>
+                            <button class="support__button button">Отправить запрос</button>
+                            <h4 class="social-heading">Соц сети и мессенджеры</h4>
+                            <div class="social__list">
+                                <a class="social__link" href="#">
+                                    <img class="social__icon" src="./image/icons/1.png" alt="icon">
+                                </a>
+                                <a class="social__link" href="#">
+                                    <img class="social__icon" src="./image/icons/2.png" alt="icon">
+                                </a>
+                                <a class="social__link" href="#">
+                                    <img class="social__icon" src="./image/icons/3.png" alt="icon">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer__menu-list"></div>
+                </div>
+            </div>
         </div>
     </footer>
     <script src="./js/main.js"></script>
